remove breakpoints. attempt to fix carousel jumping

--- a/css/main.scss
+++ b/css/main.scss
@@ -90,20 +90,24 @@ $color-dark-green: #536028;
 // breakpoint
 // =====================
 
-$xs: ( max:  767px );
-$sm: ( min:  768px );
-$md: ( min:  992px );
-$lg: ( min: 1200px );
-$sm-only: ( min: map-get($sm, min), max: map-get($md, min) - 1 );
-$md-only: ( min: map-get($md, min), max: map-get($lg, min) - 1 );
-
-@mixin breakpoint($map) {
-  $query: "";
-  @if map-has-key($map, min) { $query: append($query, "(min-width: #{map-get($map, min)})") }
-  @if map-has-key($map, min) and map-has-key($map, max) { $query: append($query, "and") }
-  @if map-has-key($map, max) { $query: append($query, "(max-width: #{map-get($map, max)})") }
-  @media screen and #{$query} { @content; }
-}
+// @mixin breakpoint($point) {
+//    @if $point == desktop {
+//      @media (min-width: 70em) { @content ; }
+//   }
+//    @else if $point == laptop {
+//      @media (min-width: 64em) { @content ; }
+//   }
+//     @else if $point == tablet {
+//      @media (min-width: 50em) { @content ; }
+//   }
+//    @else if $point == phablet {
+//      @media (min-width: 37.5em)  { @content ; }
+//   }
+//   @else if $point == mobileonly {
+//      @media (max-width: 37.5em)  { @content ; }
+//
+//   }
+// }
 
 // =====================
 // Navigation
@@ -342,6 +346,11 @@ $md-only: ( min: map-get($md, min), max: map-get($lg, min) - 1 );
 .carousel {
   padding: 5em 8em 5em 8em;
 }
+
+// .slide {
+//   transition: height 400ms easeOutBounce;
+// }
+
 .carousel-indicators--round {
   li {
     margin: 0 10px;
@@ -351,6 +360,7 @@ $md-only: ( min: map-get($md, min), max: map-get($lg, min) - 1 );
     border-radius: 100%;
     line-height: 30px;
     list-style: circle;
+
     background-color: $color-background-blue2;
     &.active {
       margin: 0 10px;
